# Prestashop_sites_synchronizer

./: .env  .gitignore  README.MD  config.py  desc_importer.py  images_importer.py  main.py  names_importer.py  pyproject.toml  requirements.txt  status_importer.py
