[tool.poetry]
name = "presta_synchronizer"
version = "0.1.0"
description = ""
authors = ["AHTOH2001 <antonlapytko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.20.0"
prestapyt = {git = "https://github.com/prestapyt/prestapyt.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
